# DoSomething-scraper

./: .env.example  .gitignore  .graphifyignore  Dockerfile  Dockerfile.dashboard  Dockerfile.scheduler  Dockerfile.worker  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-push.yml  infra.yml
alembic/: env.py
alembic/versions/: 016d1b9072e1_add_account_type_to_influencers.py  042309d39382_initial_schema.py  29826e6edfb0_add_post_outlier_metrics.py  2f485d66af55_add_profile_pic_url_to_influencers.py  4f2a7d1c9b20_add_instagram_graph_tokens.py  525b85671309_add_paused_by_category_to_influencers.py  7679cb248be6_add_extended_profile_fields.py  970d3851dd92_add_scrape_scoping_and_perf_indexes.py  a1b2c3d4e5f6_add_creator_stats_indexes.py  a3f7d92c4e18_add_creators_table.py  a4d8f2c6e9b3_add_cancel_requested_at_to_scrape_jobs.py  a69595866b73_add_extended_post_comment_profile_fields.py  a785e9a1b792_backfill_creator_groups.py  a7f21c9d4e5b_add_comment_sync_cursor_to_posts.py  ab1928095cda_add_engagement_timing_signals.py  b3e6a9c1f7d2_add_comment_sync_completeness_and_cap.py  b3f0d8e2a1c7_add_reposts_to_post_metrics_snapshot.py  b4c7e2f9a3d8_add_instagram_graph_api_support.py  b7d4f2a8c3e1_add_leaderboard_filter_indexes.py  b8d4f1a6c2e9_add_proxy_to_accounts.py  b8e21f6a5c93_add_scraper_account_to_scrape_jobs.py  (+13 more)
app/: __init__.py
dashboard/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
docs/: CREATOR_STATS_PLAN.md  CREATOR_STATS_V2_PLAN.md  DATABASE_ER_DIAGRAM.md  INSTAGRAM_GRAPH_API_PLAN.md  INSTAGRAM_HYBRID_IMPLEMENTATION.md  OUTLIERS_PLAN.md  YOUTUBE_SCRAPER_DESIGN.md
graphify-out/: .graphify_analysis.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
infra/: Caddyfile  ec2.tf  iam.tf  main.tf  outputs.tf  rds.tf  sqs.tf  user_data.sh  variables.tf
nginx/: nginx.conf
scripts/: backfill_account_type.py  backfill_creator_groups.py  backfill_outlier_metrics.py  backfill_profile_pics.py  dev.sh  fix_verified_badge.py  pull_prod_dump.sh  register_instagram_account.py  register_instagram_api_token.py  register_youtube_api_key.py  seed_and_scrape.py  seed_demo_influencers.py
tests/: conftest.py
(+254 files in other folders)
