[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "viralytics"
version = "1.0.0"
description = "Viralytics — Instagram Influencer Intelligence Platform"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Data validation & settings
    "pydantic>=2.9",
    "annotated-types>=0.7.0",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Structured logging
    "structlog>=24.0",
    # HTTP client (scraping via Instagram mobile API)
    "httpx>=0.27",
    "fake-useragent>=1.5",
    # Chrome TLS-fingerprint impersonation -- Instagram's GraphQL comment
    # endpoints gate on JA3/JA4 fingerprint, not just cookies/headers, and
    # reject plain httpx/requests at the TLS layer (see app/scraper/client.py).
    "curl_cffi>=0.7",
    # Browser automation: Instagram login (app/scraper/login_automator.py)
    "playwright>=1.44",
    "playwright-stealth>=1.0",
    # Encrypting Instagram session cookies at rest (app/core/crypto.py)
    "cryptography>=42",
    # Queue backends
    "redis>=5.0",
    "rq>=1.16",
    "boto3>=1.34",
    # Scheduling
    "apscheduler>=3.10",
    # Feature extraction helpers
    "langdetect>=1.0.9",
    "emoji>=2.12",
    # Excel parsing/generation for the influencer bulk-import feature
    # (app/api/v1/admin.py's /influencers/bulk routes)
    "openpyxl>=3.1",
    # Required by FastAPI's UploadFile/File() multipart form parsing --
    # same bulk-import routes.
    "python-multipart>=0.0.9",
    # Monitoring
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",        # httpx mock
    "factory-boy>=3.3",   # fixture factories
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
